# fastapi-poetry

./: README.md  main.py  pyproject.toml
models/: schema_request.py  schema_response.py
modules/: logging_config.py
routers/: router_hello.py
settings/: setting.py
tests/: test_hello.py
